# refeed

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  example.env  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: app.yml  ci.yml
tests/: test_main.py
tests/fixtures/: ad-rss.xml  article.html  gallery.html  gizmodo-article.html
