[project]
name = "refeed"
version = "0.1.0"
description = ""
authors = [{ name = "crccheck", email = "c@crccheck.com" }]
requires-python = ">=3.13"
dependencies = [
  "aiodns>=3.0.0",
  "aiohttp>=3.7.3",
  "async-lru>=1.0.2",
  "lxml>=4.6.2",
]

[dependency-groups]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.1",
  "pytest-cov>=3.0.0",
  "pytest-watch>=4.2.0",
  "mypy>=0.931",
  "lxml-stubs",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true
