[project]
name = "refeed"
version = "0.1.0"
description = ""
authors = [{ name = "crccheck", email = "c@crccheck.com" }]
requires-python = ">=3.13"
dependencies = [
  "aiodns>=3.0.0",
  "aiohttp>=3.7.3",
  "async-lru>=1.0.2",
  "lxml>=4.6.2",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-watch",
  "mypy",
  "lxml-stubs",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "E",  # error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
]

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true
